--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+@import "./styles/poppins.css";
+
+/* Set Poppins as default font family */
+body {
+  font-family: "Poppins", sans-serif;
+}
