--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,5 @@
 /* Set Poppins as default font family */
 body {
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden; /* prevent horizontal scrolling on mobile */
 }
